CMAKE_MINIMUM_REQUIRED(VERSION 3.12)
PROJECT(locker)
SET(SOURCES main.cpp)

SET(CMAKE_CXX_STANDARD 17)

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES})

if (CMAKE_CXX_COMPILER_ID STREQUAL GNU)
	TARGET_LINK_LIBRARIES(${PROJECT_NAME} stdc++fs)
endif()

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE ${PROJECT_SOURCE_DIR})
